RESOLVED FIXED47048
[Qt] Fix url conversion in QWebHistory
https://bugs.webkit.org/show_bug.cgi?id=47048
Summary [Qt] Fix url conversion in QWebHistory
Robert Hogan
Reported 2010-10-02 07:16:08 PDT
Converting from KURL to WFT::String to QUrl does not permit proper percent encoding later.
Attachments
Patch (5.48 KB, patch)
2010-10-02 09:03 PDT, Robert Hogan
no flags
Patch (21.91 KB, patch)
2010-10-05 14:35 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2010-10-02 09:03:53 PDT
Robert Hogan
Comment 2 2010-10-02 09:05:07 PDT
[15:06] <kling> mwenge: url conversion looks like it could/should be a separate patch <..> [15:10] <kling> mwenge: it'd be a bit cleaner, you can land that first with r=me [15:11] <mwenge> ok cool, there are a bunch of other navigation tests that need expected results, and that the url conversion will allow DRT to produce results similar to other platforms, so i'll include them there
WebKit Commit Bot
Comment 3 2010-10-05 12:01:28 PDT
Comment on attachment 69576 [details] Patch Clearing flags on attachment: 69576 Committed r69133: <http://trac.webkit.org/changeset/69133>
WebKit Commit Bot
Comment 4 2010-10-05 12:01:33 PDT
All reviewed patches have been landed. Closing bug.
Robert Hogan
Comment 5 2010-10-05 14:35:44 PDT
Andreas Kling
Comment 6 2010-10-06 16:30:31 PDT
Comment on attachment 69849 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=69849&action=review > LayoutTests/ChangeLog:17 > + OMG extra newline!
Robert Hogan
Comment 7 2010-10-09 09:10:17 PDT
Reopening to commit patch.
WebKit Commit Bot
Comment 8 2010-10-09 09:31:12 PDT
Comment on attachment 69849 [details] Patch Rejecting patch 69849 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'land-attachment', '--force-clean', '--ignore-builders', '--quiet', '--non-interactive', '--parent-command=commit-queue', 69849]" exit_code: 1 Last 500 characters of output: 69849&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=47048&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Updating working directory Processing patch 69849 from bug 47048. NOBODY (OOPS!) found in /Projects/CommitQueue/LayoutTests/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Projects/CommitQueue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/4314009
WebKit Commit Bot
Comment 9 2010-10-09 11:26:12 PDT
Comment on attachment 69849 [details] Patch Clearing flags on attachment: 69849 Committed r69451: <http://trac.webkit.org/changeset/69451>
WebKit Commit Bot
Comment 10 2010-10-09 11:26:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.